# zxc

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build_and_test.yml
docs/: definition_file.md  demo.cast
src/: cli.rs  command_defs.rs  command_resolver.rs  command_runner.rs  config.rs  def_file_finder.rs  main.rs  yaml_command_defs.rs  zxc_command_defs.rs
