[package]
name = "zxc"
version = "0.1.0"
edition = "2021"
description = "Command runner"
authors = ["Arkadiusz Jędrzejewski"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.23", features = ["derive", "string", "cargo"] }
minijinja = "2.5.0"
shlex = "1.3.0"