[package]
name = "zxc"
version = "0.1.0"
edition = "2021"
description = """
`zxc` is a directory-oriented command runner.
This means it is able to run commands defined by YAML files."""
authors = ["Arkadiusz Jędrzejewski"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5.23", features = ["derive", "string", "cargo"] }
minijinja = "2.5.0"
run_script = "0.11.0"
