[package]
name = "zxc"
version = "0.2.0"
edition = "2024"
description = """
`zxc` is a directory-oriented command runner.
This means it is able to run commands defined by YAML files."""
repository = "https://github.com/arkjedrz/zxc"
license = "MIT"
authors = ["Arkadiusz Jędrzejewski"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive", "string", "cargo"] }
minijinja = "2.7"
run_script = "0.11"

[dev-dependencies]
tempfile = "3.16"
fsio = "0.4"
serial_test = "3.2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/zxc", dest = "/usr/bin/zxc", mode = "755" },
]
